force-app/main/default/objects/Marketing_Cloud_Credential__mdt/Marketing_Cloud_Credential__mdt.object-meta.xml
<CustomObject>
    <label>Marketing Cloud Credential</label>
    <pluralLabel>Marketing Cloud Credentials</pluralLabel>
</CustomObject>