force-app/main/default/objects/Marketing_Cloud_Credential__mdt/fields/AUTH_URL__c.field-meta.xml
<CustomField>
    <fullName>AUTH_URL__c</fullName>
    <label>AUTH_URL</label>
    <type>Url</type>
</CustomField>