force-app/main/default/objects/Marketing_Cloud_Credential__mdt/fields/REST_URL__c.field-meta.xml
<CustomField>
    <fullName>REST_URL__c</fullName>
    <label>REST_URL</label>
    <type>Url</type>
</CustomField>